changed url uploader to image uploader via carrier wave gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tumblr</title>
+  <title>Cashew's Tumblr</title>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
@@ -13,7 +13,7 @@
 
 <nav class="navbar navbar-default">
   <div class="container">
-    <a class="navbar-brand" href="/">Tumblr</a>
+    <a class="navbar-brand" href="/">Cashew's Tumblr</a>
   </div>
 </nav>
 
